ghc-4335c07/testsuite/tests/typecheck/should_fail/T11974b.hs
{-# LANGUAGE ExtendedDefaultRules #-}

module T11974b where

default (Either, Monad, [], Maybe, Either Bool, Integer, Double, Blah)

data Blah
